--- a/pages/sendCarde/outCarde/outCarde.wxss
+++ b/pages/sendCarde/outCarde/outCarde.wxss
@@ -53,18 +53,13 @@
         width: 100%;
         height: 400rpx;
       }
-        .body-image image{
-          width: 100%;
-          height: 400rpx;
-        }
 
       .body-select{
-        width: 100%;
+
         height: 150rpx;
         display: flex;
         flex-direction: row;
-        align-items: center;
-        scroll-x:true;
+        align-items: center; 
         white-space: nowrap;
       }
         .select-image{
@@ -77,6 +72,7 @@
             box-shadow: 3rpx 3rpx 3rpx 3rpx #515151;
             width: 170rpx;
             height: 120rpx;
+            display: inline-block
           }
       
       .body-message{
@@ -94,10 +90,15 @@
         .body-message-b{
           width: 25%;
           text-align: center;
+          font-size: 32rpx;
+        }
+        .body-message-f{
+          font-size: 25rpx;
         }
         .body-message-t{
           width: 30%;
           text-align: center;
+          font-size: 32rpx;
         }
     .body-btn{
       padding-top: 30rpx;
