--- a/pages/carde/index.wxml
+++ b/pages/carde/index.wxml
@@ -18,13 +18,13 @@
         </view>
         <view class='search-body' wx:if="{{isShow==false}}">
           <view class='image-title' bindtap='selectAlbum'>
-            <image mode='aspectFit'  src='/assets/image/index/查看相册.png'></image>
+            <image mode='aspectFit'  src='/assets/image/index/selectCarde.png'></image>
           </view>
           <view class='image-title' bindtap='selectTrade'>
-            <image mode='aspectFit'  src='/assets/image/index/群.png'></image>
+            <image mode='aspectFit'  src='/assets/image/index/qun.png'></image>
           </view>
           <view class='image-title'>
-            <image mode='aspectFit' src='/assets/image/index/搜索.png'></image>
+            <image mode='aspectFit' src='/assets/image/index/sousuo.png'></image>
           </view>
         </view>
     </view>  
@@ -42,11 +42,11 @@
     
         <view class='head-body'>
             <view class='body-all' bindtap='selectAlbum'>
-                <view class='body-icon'><image mode='aspectFit' src='/assets/image/index/查看相册.png'></image></view>
+                <view class='body-icon'><image mode='aspectFit' src='/assets/image/index/selectCarde.png'></image></view>
                 <view class='body-text'>纸名片收纳</view>
             </view>
             <view class='body-all' bindtap='selectTrade'>
-                <view class='body-icon'><image mode='aspectFit' src='/assets/image/index/群.png'></image></view>
+                <view class='body-icon'><image mode='aspectFit' src='/assets/image/index/qun.png'></image></view>
                 <view class='body-text'>微信群换名片</view>
             </view>
         </view>
@@ -58,13 +58,14 @@
       <!-- <button open-type="getPhoneNumber"  bindgetphonenumber="getPhoneNumber">获取手机号</button>   -->
 
     <view class='page-conent'>
-        <view class='cards'>
+        <view class='cards {{isMore?"":"more"}}'  >
             <view class='card-head'>
               <view class='card-head-h'><i class="iconfont icon-tianjia"></i></view>
               <view class='card-head-b'>我的名片</view>
             </view>
+            <view class='list'>
             <view class='card-body' wx:if="{{cardes.length>0}}" wx:for="{{cardes}}">
-              <view class='carte-image'><image class='image' src="{{item.Image==''?'/assets/image/index/20180330100755.png':item.Image}}"></image></view>
+              <view class='carte-image'><image class='image' src="{{item.Image==''?'/assets/image/index/20180330100755.png':'/assets/image/index/20180330100755.png'}}"></image></view>
               <view class='card-body-t'>
                   <view class='text-h'>{{item.Name}}</view>
                   <view class='text-b'>{{item.Company}}</view>
@@ -101,6 +102,13 @@
                 </navigator>
               </view> -->
             </view>
+            <view class='xiala'>
+              <view class='crad-pull' bindtap='onMore'>
+                <i class="iconfont icon-xiala"></i>
+              </view>
+            </view>
+            </view>
+            
         </view>
         <view class='cards'>
             <view class='card-head'>
@@ -166,7 +174,7 @@
         </navigator>
       </view>
     </view>
-
+    <view style='height:300rpx;'></view>
 
 
 </view>
