--- a/pages/carde/index.wxss
+++ b/pages/carde/index.wxss
@@ -62,9 +62,10 @@
         font-size: 24rpx;
       }
 
-.page-conent{
-
-}
+  .page-head,.page-conent,.page-down{
+    width: 100%;
+  }
+  
   .cards{
     background-color: white;
     border-bottom: 20rpx solid #efeff4;
@@ -96,6 +97,9 @@
   .card-body{
     display: flex;
     flex-direction:row;
+    padding-top: 15rpx;
+    padding-bottom: 15rpx;
+    border-bottom: 1rpx solid #96999E;
   }
     .card-body-i{
       width: 250rpx;
@@ -144,9 +148,12 @@
     color: #c7c7cc;
     border-bottom: 20rpx solid #efeff4;
   }
+.unfold{
+  font-size: 24rpx;
+}
 
-.page-down{
-
+.more .crad-pull {
+    transform: rotate(180deg);
 }
   .cell {
     font-size: 34rpx;
@@ -189,7 +196,6 @@
   .carte{
   width: 100%;
   height: 150rpx;
-  margin: 20rpx;
 }
 .content{
   height: 125rpx;
@@ -197,11 +203,21 @@
 }
 .carte-image{
   width : 200rpx;
-  background-color: blue;
 }
 .image{
     width: 200rpx;
     height: 125rpx;
+}
+.xiala{
+  width: 100%;
+  height: 50rpx;
+   /* background-color: blue;  */
+  
+}
+.xiala i{
+  position: selative;
+  margin-left: 350rpx;
+  /* margin-top: -50rpx; */
 }
 .carte-Info{
   padding-left: 30rpx;
